--- a/messages/bn/LC_MESSAGES/4217.po
+++ b/messages/bn/LC_MESSAGES/4217.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2021-01-29 08:32+0000\n"
+"PO-Revision-Date: 2021-07-01 02:34+0000\n"
 "Last-Translator: Oymate <dhruboadittya96@gmail.com>\n"
 "Language-Team: Bengali <https://hosted.weblate.org/projects/iso-codes/"
 "iso-4217/bn/>\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 4.5-dev\n"
+"X-Generator: Weblate 4.8-dev\n"
 
 #. Name for AED
 msgid "UAE Dirham"
@@ -76,87 +76,88 @@ msgstr "টাকা"
 
 #. Name for BGN
 msgid "Bulgarian Lev"
-msgstr ""
+msgstr "বুলগেরিয়ান লেভ"
 
 #. Name for BHD
 msgid "Bahraini Dinar"
-msgstr ""
+msgstr "বাহরাইনি দিনার"
 
 #. Name for BIF
 msgid "Burundi Franc"
-msgstr ""
+msgstr "বুরুন্ডি ফ্রাঙ্ক"
 
 #. Name for BMD
 msgid "Bermudian Dollar"
-msgstr ""
+msgstr "বারমুডীয় ডলার"
 
 #. Name for BND
 msgid "Brunei Dollar"
-msgstr ""
+msgstr "ব্রুনাই ডলার"
 
 #. Name for BOB
 msgid "Boliviano"
-msgstr ""
+msgstr "বলিভিয়ানো"
 
 #. Name for BRL
 msgid "Brazilian Real"
-msgstr ""
+msgstr "ব্রাজিলীয় রিয়াল"
 
 #. Name for BSD
 msgid "Bahamian Dollar"
-msgstr ""
+msgstr "বাহামীয় ডলার"
 
 #. Name for BTN
 msgid "Ngultrum"
-msgstr ""
+msgstr "ভুটানীয় এনগলট্রাম"
 
 #. Name for BWP
 msgid "Pula"
-msgstr ""
+msgstr "পুলা"
 
 #. Name for BYN
 msgid "Belarusian Ruble"
-msgstr ""
+msgstr "বেলারুশীয় রুবেল"
 
 #. Name for BZD
 msgid "Belize Dollar"
-msgstr ""
+msgstr "বেলিজ ডলার"
 
 #. Name for CAD
 msgid "Canadian Dollar"
-msgstr ""
+msgstr "কানাডীয় ডলার"
 
 #. Name for CDF
 msgid "Congolese Franc"
-msgstr ""
+msgstr "কঙ্গোর ফ্রাঙ্ক"
 
 #. Name for CHF
 msgid "Swiss Franc"
-msgstr ""
+msgstr "সুইস ফ্রাঙ্ক"
 
 #. Name for CLP
+#, fuzzy
 msgid "Chilean Peso"
-msgstr ""
+msgstr "চিলির পেসো"
 
 #. Name for CNY
 msgid "Yuan Renminbi"
-msgstr ""
+msgstr "ইউয়ান রেনমিনবি"
 
 #. Name for COP
 msgid "Colombian Peso"
-msgstr ""
+msgstr "কলম্বিয় পেসো"
 
 #. Name for CRC
 msgid "Costa Rican Colon"
-msgstr ""
+msgstr "কোস্টা রিকার কোলন"
 
 #. Name for CUC
 msgid "Peso Convertible"
-msgstr ""
+msgstr "রূপান্তরযোগ্য পেসো"
 
 #. Name for CUP
 msgid "Cuban Peso"
-msgstr ""
+msgstr "কিউবার পেসো"
 
 #. Name for CVE
 msgid "Cabo Verde Escudo"
