--- a/messages/he/LC_MESSAGES/3166-2.po
+++ b/messages/he/LC_MESSAGES/3166-2.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2020-05-19 14:57+0200\n"
-"PO-Revision-Date: 2021-05-11 04:22+0000\n"
+"PO-Revision-Date: 2021-07-13 05:32+0000\n"
 "Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
 "Language-Team: Hebrew <https://hosted.weblate.org/projects/iso-codes/"
 "iso-3166-2/he/>\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=4; plural=(n == 1) ? 0 : ((n == 2) ? 1 : ((n > 10 && "
 "n % 10 == 0) ? 2 : 3));\n"
-"X-Generator: Weblate 4.7-dev\n"
+"X-Generator: Weblate 4.7.2-dev\n"
 
 #. Name for AD-02
 msgid "Canillo"
@@ -16825,15 +16825,15 @@ msgstr ""
 
 #. Name for TM-A
 msgid "Ahal"
-msgstr ""
+msgstr "אחל"
 
 #. Name for TM-B
 msgid "Balkan"
-msgstr ""
+msgstr "בלקן"
 
 #. Name for TM-D
 msgid "Daşoguz"
-msgstr ""
+msgstr "דשקוז"
 
 #. Name for TM-L
 msgid "Lebap"
@@ -17969,7 +17969,7 @@ msgstr ""
 
 #. Name for UG-412
 msgid "Rukungiri"
-msgstr ""
+msgstr "רוקונגירי"
 
 #. Name for UG-413
 msgid "Kamwenge"
@@ -17981,7 +17981,7 @@ msgstr "קנונגו"
 
 #. Name for UG-415
 msgid "Kyenjojo"
-msgstr ""
+msgstr "קיינג׳וג׳ו"
 
 #. Name for UG-416
 msgid "Ibanda"
