--- a/messages/ru/LC_MESSAGES/3166-2.po
+++ b/messages/ru/LC_MESSAGES/3166-2.po
@@ -6,14 +6,15 @@
 #
 # Copyright ©
 # Aleksey Reprintsev <a.reprintsev@gmail.com>, 2020.
+# Alex Brohovsky <san4ito94@gmail.com>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_3166-2\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2020-05-19 14:57+0200\n"
-"PO-Revision-Date: 2020-12-25 15:29+0000\n"
-"Last-Translator: Aleksey Reprintsev <a.reprintsev@gmail.com>\n"
+"PO-Revision-Date: 2021-07-25 17:32+0000\n"
+"Last-Translator: Alex Brohovsky <san4ito94@gmail.com>\n"
 "Language-Team: Russian <https://hosted.weblate.org/projects/iso-codes/"
 "iso-3166-2/ru/>\n"
 "Language: ru\n"
@@ -22,7 +23,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 4.4.1-dev\n"
+"X-Generator: Weblate 4.7.2-dev\n"
 
 #. Name for AD-02
 msgid "Canillo"
@@ -18162,83 +18163,83 @@ msgstr ""
 
 #. Name for US-NH
 msgid "New Hampshire"
-msgstr ""
+msgstr "Нью-Гэмпшир"
 
 #. Name for US-NJ
 msgid "New Jersey"
-msgstr ""
+msgstr "Нью-Джерси"
 
 #. Name for US-NM
 msgid "New Mexico"
-msgstr ""
+msgstr "Нью-Мексико"
 
 #. Name for US-NV
 msgid "Nevada"
-msgstr ""
+msgstr "Невада"
 
 #. Name for US-NY
 msgid "New York"
-msgstr ""
+msgstr "Нью-Йорк"
 
 #. Name for US-OH
 msgid "Ohio"
-msgstr ""
+msgstr "Огайо"
 
 #. Name for US-OK
 msgid "Oklahoma"
-msgstr ""
+msgstr "Оклахома"
 
 #. Name for US-OR
 msgid "Oregon"
-msgstr ""
+msgstr "Орегон"
 
 #. Name for US-PA
 msgid "Pennsylvania"
-msgstr ""
+msgstr "Пенсильвания"
 
 #. Name for US-PR
 msgid "Puerto Rico"
-msgstr ""
+msgstr "Пуэрто-Рико"
 
 #. Name for US-RI
 msgid "Rhode Island"
-msgstr ""
+msgstr "Род-Айленд"
 
 #. Name for US-SC
 msgid "South Carolina"
-msgstr ""
+msgstr "Южная Каролина"
 
 #. Name for US-SD
 msgid "South Dakota"
-msgstr ""
+msgstr "Южная Дакота"
 
 #. Name for US-TN
 msgid "Tennessee"
-msgstr ""
+msgstr "Теннесси"
 
 #. Name for US-TX
 msgid "Texas"
-msgstr ""
+msgstr "Техас"
 
 #. Name for US-UM
 msgid "United States Minor Outlying Islands"
-msgstr ""
+msgstr "Внешние малые острова США"
 
 #. Name for US-UT
 msgid "Utah"
-msgstr ""
+msgstr "Юта"
 
 #. Name for US-VA
 msgid "Virginia"
-msgstr ""
+msgstr "Вирджиния"
 
 #. Name for US-VI
 msgid "Virgin Islands"
-msgstr ""
+msgstr "Виргинские Острова"
 
 #. Name for US-VT
 msgid "Vermont"
-msgstr ""
+msgstr "Вермонт"
 
 #. Name for US-WA
 msgid "Washington"
@@ -18954,12 +18955,12 @@ msgstr ""
 
 #. Name for ZW-MS
 msgid "Matabeleland South"
-msgstr ""
+msgstr "Южный Матабелеленд"
 
 #. Name for ZW-MV
 msgid "Masvingo"
-msgstr ""
+msgstr "Масвинго"
 
 #. Name for ZW-MW
 msgid "Mashonaland West"
-msgstr ""
+msgstr "Западный Машоналенд"
