--- a/messages/fur/LC_MESSAGES/639-2.po
+++ b/messages/fur/LC_MESSAGES/639-2.po
@@ -5,14 +5,14 @@
 # This file is distributed under the same license as the iso-codes package.
 #
 # Copyright ©
-# Fabio Tomat <f.t.public@gmail.com>, 2020.
+# Fabio Tomat <f.t.public@gmail.com>, 2020, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_639-2\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2020-12-14 15:29+0000\n"
+"PO-Revision-Date: 2021-09-17 12:36+0000\n"
 "Last-Translator: Fabio Tomat <f.t.public@gmail.com>\n"
 "Language-Team: Friulian <https://hosted.weblate.org/projects/iso-codes/"
 "iso-639-2/fur/>\n"
@@ -21,7 +21,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.4-dev\n"
+"X-Generator: Weblate 4.9-dev\n"
 
 #. Name for aar
 msgid "Afar"
@@ -1868,7 +1868,7 @@ msgstr "Venda"
 
 #. Name for vie
 msgid "Vietnamese"
-msgstr "Vietnamît"
+msgstr "Vietnamite"
 
 #. Name for vol
 msgid "Volapük"
