--- a/messages/pt_BR/LC_MESSAGES/3166-1.po
+++ b/messages/pt_BR/LC_MESSAGES/3166-1.po
@@ -20,8 +20,8 @@ msgstr ""
 "POT-Creation-Date: 2021-08-25 00:34+0200\n"
 "PO-Revision-Date: 2021-09-02 09:33+0000\n"
 "Last-Translator: Adriano Rafael Gomes <adrianorg@arg.eti.br>\n"
-"Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/"
-"iso-codes/iso-3166-1/pt_BR/>\n"
+"Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/iso-"
+"codes/iso-3166-1/pt_BR/>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
