--- a/messages/zh_CN/LC_MESSAGES/3166-2.po
+++ b/messages/zh_CN/LC_MESSAGES/3166-2.po
@@ -19,8 +19,8 @@ msgstr ""
 "POT-Creation-Date: 2021-08-27 13:34+0200\n"
 "PO-Revision-Date: 2021-08-27 18:09+0000\n"
 "Last-Translator: Boyuan Yang <073plan@gmail.com>\n"
-"Language-Team: Chinese (Simplified) <https://hosted.weblate.org/projects/"
-"iso-codes/iso-3166-2/zh_Hans/>\n"
+"Language-Team: Chinese (Simplified) <https://hosted.weblate.org/projects/iso-"
+"codes/iso-3166-2/zh_Hans/>\n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
