--- a/messages/zh_Hans/LC_MESSAGES/639-5.po
+++ b/messages/zh_Hans/LC_MESSAGES/639-5.po
@@ -14,8 +14,8 @@ msgstr ""
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
 "PO-Revision-Date: 2021-08-27 18:09+0000\n"
 "Last-Translator: Boyuan Yang <073plan@gmail.com>\n"
-"Language-Team: Chinese (Simplified) <https://hosted.weblate.org/projects/"
-"iso-codes/iso-639-5/zh_Hans/>\n"
+"Language-Team: Chinese (Simplified) <https://hosted.weblate.org/projects/iso-"
+"codes/iso-639-5/zh_Hans/>\n"
 "Language: zh_Hans\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
