--- a/messages/eo/LC_MESSAGES/3166-1.po
+++ b/messages/eo/LC_MESSAGES/3166-1.po
@@ -8,19 +8,23 @@
 # Alastair McKInstry <mckinstry@computer.org>, 2001.
 # D. Dale Gulledge <dsplat@rochester.rr.com>, 2001.
 # Edmund GRIMLEY EVANS <edmundo@rano.org>, 2004-2015.
+# phlostically <phlostically@mailinator.com>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_3166-1\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2021-08-25 00:34+0200\n"
-"PO-Revision-Date: 2015-07-10 13:46+0100\n"
-"Last-Translator: Edmund GRIMLEY EVANS <edmundo@rano.org>\n"
-"Language-Team: Esperanto <translation-team-eo@lists.sourceforge.net>\n"
+"PO-Revision-Date: 2021-11-29 23:10+0000\n"
+"Last-Translator: phlostically <phlostically@mailinator.com>\n"
+"Language-Team: Esperanto <https://hosted.weblate.org/projects/iso-codes/"
+"iso-3166-1/eo/>\n"
 "Language: eo\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8-bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.10-dev\n"
 
 #. Name for ABW
 msgid "Aruba"
@@ -347,14 +351,10 @@ msgid "Union of the Comoros"
 msgstr "Unio de la Komoroj"
 
 #. Name for CPV
-#, fuzzy
-#| msgid "Cape Verde"
 msgid "Cabo Verde"
 msgstr "Kabo-Verdo"
 
 #. Official name for CPV
-#, fuzzy
-#| msgid "Republic of Cape Verde"
 msgid "Republic of Cabo Verde"
 msgstr "Respubliko Kabo-Verdo"
 
@@ -396,7 +396,7 @@ msgstr "Respubliko Kipro"
 
 #. Name for CZE
 msgid "Czechia"
-msgstr ""
+msgstr "Ĉeĥio"
 
 #. Official name for CZE
 msgid "Czech Republic"
@@ -591,10 +591,8 @@ msgid "Gambia"
 msgstr "Gambio"
 
 #. Official name for GMB
-#, fuzzy
-#| msgid "Republic of Zambia"
 msgid "Republic of the Gambia"
-msgstr "Respubliko Zambio"
+msgstr "Respubliko Gambio"
 
 #. Name for GNB
 msgid "Guinea-Bissau"
@@ -829,10 +827,8 @@ msgid "Korea, Republic of"
 msgstr "Koreio, Respubliko"
 
 #. Common name for KOR
-#, fuzzy
-#| msgid "South Africa"
 msgid "South Korea"
-msgstr "Sud-Afriko"
+msgstr "Sud-Koreio"
 
 #. Name for KWT
 msgid "Kuwait"
@@ -991,16 +987,12 @@ msgid "Republic of the Marshall Islands"
 msgstr "Respubliko Marŝalaj Insuloj"
 
 #. Name for MKD
-#, fuzzy
-#| msgid "New Caledonia"
 msgid "North Macedonia"
-msgstr "Nov-Kaledonio"
+msgstr "Nord-Makedonio"
 
 #. Official name for MKD
-#, fuzzy
-#| msgid "Republic of Lithuania"
 msgid "Republic of North Macedonia"
-msgstr "Respubliko Litovio"
+msgstr "Respubliko Nord-Makedonio"
 
 #. Name for MLI
 msgid "Mali"
@@ -1251,10 +1243,8 @@ msgid "Democratic People's Republic of Korea"
 msgstr "Demokratia Popola Respubliko Koreio"
 
 #. Common name for PRK
-#, fuzzy
-#| msgid "New Caledonia"
 msgid "North Korea"
-msgstr "Nov-Kaledonio"
+msgstr "Nord-Koreio"
 
 #. Name for PRT
 msgid "Portugal"
@@ -1454,13 +1444,11 @@ msgstr "Reĝlando Svedio"
 
 #. Name for SWZ
 msgid "Eswatini"
-msgstr ""
+msgstr "Svazilando"
 
 #. Official name for SWZ
-#, fuzzy
-#| msgid "Kingdom of Spain"
 msgid "Kingdom of Eswatini"
-msgstr "Reĝlando Hispanio"
+msgstr "Reĝlando Svazilando"
 
 #. Name for SXM, Official name for SXM
 msgid "Sint Maarten (Dutch part)"
@@ -1671,8 +1659,6 @@ msgid "Socialist Republic of Viet Nam"
 msgstr "Socialisma Respubliko Vjetnamio"
 
 #. Common name for VNM
-#, fuzzy
-#| msgid "Viet Nam"
 msgid "Vietnam"
 msgstr "Vjetnamio"
 
