--- a/messages/ru/LC_MESSAGES/3166-2.po
+++ b/messages/ru/LC_MESSAGES/3166-2.po
@@ -7,14 +7,15 @@
 # Copyright ©
 # Aleksey Reprintsev <a.reprintsev@gmail.com>, 2020.
 # Alex Brohovsky <san4ito94@gmail.com>, 2021.
+# Azamat H. Hackimov <azamat.hackimov@gmail.com>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_3166-2\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2021-08-27 13:34+0200\n"
-"PO-Revision-Date: 2021-07-25 17:32+0000\n"
-"Last-Translator: Alex Brohovsky <san4ito94@gmail.com>\n"
+"PO-Revision-Date: 2021-11-30 23:53+0000\n"
+"Last-Translator: Azamat H. Hackimov <azamat.hackimov@gmail.com>\n"
 "Language-Team: Russian <https://hosted.weblate.org/projects/iso-codes/"
 "iso-3166-2/ru/>\n"
 "Language: ru\n"
@@ -23,7 +24,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 4.7.2-dev\n"
+"X-Generator: Weblate 4.10-dev\n"
 
 #. Name for AD-02
 msgid "Canillo"
@@ -503,7 +504,7 @@ msgstr "Неукен"
 
 #. Name for AR-R, Name for UY-RN
 msgid "Río Negro"
-msgstr ""
+msgstr "Рио-Негро"
 
 #. Name for AR-S
 msgid "Santa Fe"
@@ -5317,7 +5318,7 @@ msgstr ""
 
 #. Name for FR-49
 msgid "Maine-et-Loire"
-msgstr ""
+msgstr "Мен и Луара"
 
 #. Name for FR-50
 msgid "Manche"
@@ -15161,335 +15162,335 @@ msgstr ""
 
 #. Name for RU-AD
 msgid "Adygeja, Respublika"
-msgstr ""
+msgstr "Республика Адыгея"
 
 #. Name for RU-AL
 msgid "Altaj, Respublika"
-msgstr ""
+msgstr "Республика Алтай"
 
 #. Name for RU-ALT
 msgid "Altajskij kraj"
-msgstr ""
+msgstr "Алтайский край"
 
 #. Name for RU-AMU
 msgid "Amurskaja oblast'"
-msgstr ""
+msgstr "Амурская область"
 
 #. Name for RU-ARK
 msgid "Arhangel'skaja oblast'"
-msgstr ""
+msgstr "Архангельская область"
 
 #. Name for RU-AST
 msgid "Astrahanskaja oblast'"
-msgstr ""
+msgstr "Астраханская область"
 
 #. Name for RU-BA
 msgid "Bashkortostan, Respublika"
-msgstr ""
+msgstr "Республика Башкортостан"
 
 #. Name for RU-BEL
 msgid "Belgorodskaja oblast'"
-msgstr ""
+msgstr "Белгородская область"
 
 #. Name for RU-BRY
 msgid "Brjanskaja oblast'"
-msgstr ""
+msgstr "Брянская область"
 
 #. Name for RU-BU
 msgid "Burjatija, Respublika"
-msgstr ""
+msgstr "Республика Бурятия"
 
 #. Name for RU-CE
 msgid "Chechenskaya Respublika"
-msgstr ""
+msgstr "Чеченская республика"
 
 #. Name for RU-CHE
 msgid "Chelyabinskaya oblast'"
-msgstr ""
+msgstr "Челябинская область"
 
 #. Name for RU-CHU
 msgid "Chukotskiy avtonomnyy okrug"
-msgstr ""
+msgstr "Чукотский автономный округ"
 
 #. Name for RU-CU
 msgid "Chuvashskaya Respublika"
-msgstr ""
+msgstr "Чувашская республика"
 
 #. Name for RU-DA
 msgid "Dagestan, Respublika"
-msgstr ""
+msgstr "Республика Дагестан"
 
 #. Name for RU-IN
 msgid "Ingushetiya, Respublika"
-msgstr ""
+msgstr "Республика Ингушетия"
 
 #. Name for RU-IRK
 msgid "Irkutskaja oblast'"
-msgstr ""
+msgstr "Иркутская область"
 
 #. Name for RU-IVA
 msgid "Ivanovskaja oblast'"
-msgstr ""
+msgstr "Ивановская область"
 
 #. Name for RU-KAM
 msgid "Kamchatskiy kray"
-msgstr ""
+msgstr "Камчатский край"
 
 #. Name for RU-KB
 msgid "Kabardino-Balkarskaja Respublika"
-msgstr ""
+msgstr "Кабардино-Балкарская республика"
 
 #. Name for RU-KC
 msgid "Karachayevo-Cherkesskaya Respublika"
-msgstr ""
+msgstr "Карачаево-Черкесская республика"
 
 #. Name for RU-KDA
 msgid "Krasnodarskij kraj"
-msgstr ""
+msgstr "Краснодарский край"
 
 #. Name for RU-KEM
 msgid "Kemerovskaja oblast'"
-msgstr ""
+msgstr "Кемеровская область"
 
 #. Name for RU-KGD
 msgid "Kaliningradskaja oblast'"
-msgstr ""
+msgstr "Калининградская область"
 
 #. Name for RU-KGN
 msgid "Kurganskaja oblast'"
-msgstr ""
+msgstr "Курганская область"
 
 #. Name for RU-KHA
 msgid "Habarovskij kraj"
-msgstr ""
+msgstr "Хабаровский край"
 
 #. Name for RU-KHM
 msgid "Hanty-Mansijskij avtonomnyj okrug"
-msgstr ""
+msgstr "Ханты-Мансийский автономный округ"
 
 #. Name for RU-KIR
 msgid "Kirovskaja oblast'"
-msgstr ""
+msgstr "Кировская область"
 
 #. Name for RU-KK
 msgid "Hakasija, Respublika"
-msgstr ""
+msgstr "Республика Хакассия"
 
 #. Name for RU-KL
 msgid "Kalmykija, Respublika"
-msgstr ""
+msgstr "Республика Калмыкия"
 
 #. Name for RU-KLU
 msgid "Kaluzhskaya oblast'"
-msgstr ""
+msgstr "Калужская область"
 
 #. Name for RU-KO
 msgid "Komi, Respublika"
-msgstr ""
+msgstr "Республика Коми"
 
 #. Name for RU-KOS
 msgid "Kostromskaja oblast'"
-msgstr ""
+msgstr "Костромская область"
 
 #. Name for RU-KR
 msgid "Karelija, Respublika"
-msgstr ""
+msgstr "Республика Карелия"
 
 #. Name for RU-KRS
 msgid "Kurskaja oblast'"
-msgstr ""
+msgstr "Курская область"
 
 #. Name for RU-KYA
 msgid "Krasnojarskij kraj"
-msgstr ""
+msgstr "Красноярский край"
 
 #. Name for RU-LEN
 msgid "Leningradskaja oblast'"
-msgstr ""
+msgstr "Ленинградская область"
 
 #. Name for RU-LIP
 msgid "Lipeckaja oblast'"
-msgstr ""
+msgstr "Липецкая область"
 
 #. Name for RU-MAG
 msgid "Magadanskaja oblast'"
-msgstr ""
+msgstr "Магаданская область"
 
 #. Name for RU-ME
 msgid "Marij Èl, Respublika"
-msgstr ""
+msgstr "Республика Марий Эл"
 
 #. Name for RU-MO
 msgid "Mordovija, Respublika"
-msgstr ""
+msgstr "Республика Мордовия"
 
 #. Name for RU-MOS
 msgid "Moskovskaja oblast'"
-msgstr ""
+msgstr "Московская область"
 
 #. Name for RU-MOW
 msgid "Moskva"
-msgstr ""
+msgstr "Москва"
 
 #. Name for RU-MUR
 msgid "Murmanskaja oblast'"
-msgstr ""
+msgstr "Мурманская область"
 
 #. Name for RU-NEN
 msgid "Neneckij avtonomnyj okrug"
-msgstr ""
+msgstr "Ненецкий автономный округ"
 
 #. Name for RU-NGR
 msgid "Novgorodskaja oblast'"
-msgstr ""
+msgstr "Новгородская область"
 
 #. Name for RU-NIZ
 msgid "Nizhegorodskaya oblast'"
-msgstr ""
+msgstr "Нижегородская область"
 
 #. Name for RU-NVS
 msgid "Novosibirskaja oblast'"
-msgstr ""
+msgstr "Новосибирская область"
 
 #. Name for RU-OMS
 msgid "Omskaja oblast'"
-msgstr ""
+msgstr "Омская область"
 
 #. Name for RU-ORE
 msgid "Orenburgskaja oblast'"
-msgstr ""
+msgstr "Оренбургская область"
 
 #. Name for RU-ORL
 msgid "Orlovskaja oblast'"
-msgstr ""
+msgstr "Орловская область"
 
 #. Name for RU-PER
 msgid "Permskij kraj"
-msgstr ""
+msgstr "Пермский край"
 
 #. Name for RU-PNZ
 msgid "Penzenskaja oblast'"
-msgstr ""
+msgstr "Пензенская область"
 
 #. Name for RU-PRI
 msgid "Primorskij kraj"
-msgstr ""
+msgstr "Приморский край"
 
 #. Name for RU-PSK
 msgid "Pskovskaja oblast'"
-msgstr ""
+msgstr "Псковская область"
 
 #. Name for RU-ROS
 msgid "Rostovskaja oblast'"
-msgstr ""
+msgstr "Ростовская область"
 
 #. Name for RU-RYA
 msgid "Rjazanskaja oblast'"
-msgstr ""
+msgstr "Рязанская область"
 
 #. Name for RU-SA
 msgid "Saha, Respublika"
-msgstr ""
+msgstr "Республика Саха"
 
 #. Name for RU-SAK
 msgid "Sahalinskaja oblast'"
-msgstr ""
+msgstr "Сахалинская область"
 
 #. Name for RU-SAM
 msgid "Samarskaja oblast'"
-msgstr ""
+msgstr "Самарская область"
 
 #. Name for RU-SAR
 msgid "Saratovskaja oblast'"
-msgstr ""
+msgstr "Саратовская область"
 
 #. Name for RU-SE
 msgid "Severnaja Osetija, Respublika"
-msgstr ""
+msgstr "Республика Северная Осетия"
 
 #. Name for RU-SMO
 msgid "Smolenskaja oblast'"
-msgstr ""
+msgstr "Смоленская область"
 
 #. Name for RU-SPE
 msgid "Sankt-Peterburg"
-msgstr ""
+msgstr "Санкт-Петербург"
 
 #. Name for RU-STA
 msgid "Stavropol'skij kraj"
-msgstr ""
+msgstr "Ставропольский край"
 
 #. Name for RU-SVE
 msgid "Sverdlovskaja oblast'"
-msgstr ""
+msgstr "Свердловская область"
 
 #. Name for RU-TA
 msgid "Tatarstan, Respublika"
-msgstr ""
+msgstr "Республика Татарстан"
 
 #. Name for RU-TAM
 msgid "Tambovskaja oblast'"
-msgstr ""
+msgstr "Тамбовская область"
 
 #. Name for RU-TOM
 msgid "Tomskaja oblast'"
-msgstr ""
+msgstr "Томская область"
 
 #. Name for RU-TUL
 msgid "Tul'skaja oblast'"
-msgstr ""
+msgstr "Тульская область"
 
 #. Name for RU-TVE
 msgid "Tverskaja oblast'"
-msgstr ""
+msgstr "Тверская область"
 
 #. Name for RU-TY
 msgid "Tyva, Respublika"
-msgstr ""
+msgstr "Республика Тува"
 
 #. Name for RU-TYU
 msgid "Tjumenskaja oblast'"
-msgstr ""
+msgstr "Тюменская область"
 
 #. Name for RU-UD
 msgid "Udmurtskaja Respublika"
-msgstr ""
+msgstr "Республика Удмуртия"
 
 #. Name for RU-ULY
 msgid "Ul'janovskaja oblast'"
-msgstr ""
+msgstr "Ульяновская область"
 
 #. Name for RU-VGG
 msgid "Volgogradskaja oblast'"
-msgstr ""
+msgstr "Волгоградская область"
 
 #. Name for RU-VLA
 msgid "Vladimirskaja oblast'"
-msgstr ""
+msgstr "Владимирская область"
 
 #. Name for RU-VLG
 msgid "Vologodskaja oblast'"
-msgstr ""
+msgstr "Вологодская область"
 
 #. Name for RU-VOR
 msgid "Voronezhskaya oblast'"
-msgstr ""
+msgstr "Воронежская область"
 
 #. Name for RU-YAN
 msgid "Jamalo-Neneckij avtonomnyj okrug"
-msgstr ""
+msgstr "Ямало-Ненецкий автономный округ"
 
 #. Name for RU-YAR
 msgid "Jaroslavskaja oblast'"
-msgstr ""
+msgstr "Ярославская область"
 
 #. Name for RU-YEV
 msgid "Evrejskaja avtonomnaja oblast'"
-msgstr ""
+msgstr "Еврейская автономная область"
 
 #. Name for RU-ZAB
 msgid "Zabajkal'skij kraj"
-msgstr ""
+msgstr "Забайкальский край"
 
 #. Name for RW-01
 msgid "City of Kigali"
