--- a/messages/en/LC_MESSAGES/3166-2.po
+++ b/messages/en/LC_MESSAGES/3166-2.po
@@ -11,14 +11,15 @@
 # Serge Karpesh <skarpiesz@gmail.com>, 2020.
 # tao wang <tonywang5@163.com>, 2020.
 # Eleanor <5abbwfw5@mailer.me>, 2021.
+# Joe Bennett <joe@assimtech.com>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_3166-2\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2021-08-27 13:34+0200\n"
-"PO-Revision-Date: 2021-10-27 15:42+0000\n"
-"Last-Translator: Eleanor <5abbwfw5@mailer.me>\n"
+"PO-Revision-Date: 2021-11-29 23:10+0000\n"
+"Last-Translator: Joe Bennett <joe@assimtech.com>\n"
 "Language-Team: English <https://hosted.weblate.org/projects/iso-codes/"
 "iso-3166-2/en/>\n"
 "Language: en\n"
@@ -26,7 +27,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.9-dev\n"
+"X-Generator: Weblate 4.10-dev\n"
 
 #. Name for AD-02
 msgid "Canillo"
@@ -9605,7 +9606,7 @@ msgstr "Rieti"
 
 #. Name for IT-RM
 msgid "Roma"
-msgstr "Roma"
+msgstr "Rome"
 
 #. Name for IT-RN
 msgid "Rimini"
