--- a/messages/eo/LC_MESSAGES/639-2.po
+++ b/messages/eo/LC_MESSAGES/639-2.po
@@ -7,19 +7,23 @@
 # Copyright ©
 # Alastair McKinstry <mckinstry@debian.org>, 2002.
 # Edmund GRIMLEY EVANS <edmundo@rano.org>, 2004-2011, 2013.
+# phlostically <phlostically@mailinator.com>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_639-2\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2013-04-10 16:54+0100\n"
-"Last-Translator: Edmund GRIMLEY EVANS <edmundo@rano.org>\n"
-"Language-Team: Esperanto <translation-team-eo@lists.sourceforge.net>\n"
+"PO-Revision-Date: 2021-11-30 23:53+0000\n"
+"Last-Translator: phlostically <phlostically@mailinator.com>\n"
+"Language-Team: Esperanto <https://hosted.weblate.org/projects/iso-codes/"
+"iso-639-2/eo/>\n"
 "Language: eo\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.10-dev\n"
 
 #. Name for aar
 msgid "Afar"
@@ -243,7 +247,7 @@ msgstr "Siksika"
 
 #. Name for bnt
 msgid "Bantu (Other)"
-msgstr ""
+msgstr "Bantua (alia)"
 
 #. Name for bod
 msgid "Tibetan"
@@ -1334,10 +1338,8 @@ msgid "Nzima"
 msgstr "Nzima"
 
 #. Name for oci
-#, fuzzy
-#| msgid "Occitan (post 1500)"
 msgid "Occitan (post 1500); Provençal"
-msgstr "Okcitana (post 1500)"
+msgstr "Okcitana (post 1500); Provenca"
 
 #. Name for oji
 msgid "Ojibwa"
@@ -1428,10 +1430,8 @@ msgid "Prakrit languages"
 msgstr "Prakritaj lingvoj"
 
 #. Name for pro
-#, fuzzy
-#| msgid "Provençal, Old (to 1500); Occitan, Old (to 1500)"
 msgid "Provençal, Old (to 1500)"
-msgstr "Provenca, malnova (ĝis 1500); Okcitana, malnova (ĝis 1500)"
+msgstr "Provenca, malnova (ĝis 1500)"
 
 #. Name for pus
 msgid "Pushto; Pashto"
@@ -1470,10 +1470,8 @@ msgid "Romany"
 msgstr "Romaa"
 
 #. Name for ron
-#, fuzzy
-#| msgid "Moldavian; Moldovan"
 msgid "Romanian; Moldavian; Moldovan"
-msgstr "Moldava"
+msgstr "Rumana; Moldava"
 
 #. Name for run
 msgid "Rundi"
@@ -1500,10 +1498,8 @@ msgid "Yakut"
 msgstr "Jakuta"
 
 #. Name for sai
-#, fuzzy
-#| msgid "South American Indian languages"
 msgid "South American Indian (Other)"
-msgstr "Sudamerikaj indianaj lingvoj"
+msgstr "Sudamerikaj indianaj lingvoj (aliaj)"
 
 #. Name for sal
 msgid "Salishan languages"
