--- a/messages/gu/LC_MESSAGES/639-2.po
+++ b/messages/gu/LC_MESSAGES/639-2.po
@@ -7,21 +7,23 @@
 # Copyright ©
 # Ankit Patel <ankit644@yahoo.com>, 2009.
 # Sweta Kothari <swkothar@redhat.com>, 2009-2010.
+# KushagraKarira <kushagrakarira@gmail.com>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_639-2\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2010-09-21 12:13+0530\n"
-"Last-Translator: Ankit Patel <ankit644@yahoo.com>\n"
-"Language-Team: Gujarati <indianoss-gujarati@lists.sourceforge.net>\n"
+"PO-Revision-Date: 2021-11-18 11:53+0000\n"
+"Last-Translator: KushagraKarira <kushagrakarira@gmail.com>\n"
+"Language-Team: Gujarati <https://hosted.weblate.org/projects/iso-codes/"
+"iso-639-2/gu/>\n"
 "Language: gu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.9.1-dev\n"
 
 #. Name for aar
 msgid "Afar"
@@ -213,7 +215,7 @@ msgstr "બંગાળી"
 
 #. Common name for ben
 msgid "Bangla"
-msgstr ""
+msgstr "બાંગ્લા"
 
 #. Name for ber
 msgid "Berber languages"
@@ -245,7 +247,7 @@ msgstr "શિક્ષીકા"
 
 #. Name for bnt
 msgid "Bantu (Other)"
-msgstr ""
+msgstr "બન્ટુ (અન્ય)"
 
 #. Name for bod
 msgid "Tibetan"
@@ -914,8 +916,6 @@ msgid "Central Khmer"
 msgstr "કેન્દ્રિય ખ્મેર"
 
 #. Name for kho
-#, fuzzy
-#| msgid "Khotanese;Sakan"
 msgid "Khotanese; Sakan"
 msgstr "ખોટાની;સાકાન"
 
@@ -1336,8 +1336,6 @@ msgid "Nzima"
 msgstr "ન્ઝીમા"
 
 #. Name for oci
-#, fuzzy
-#| msgid "Occitan (post 1500)"
 msgid "Occitan (post 1500); Provençal"
 msgstr "ઓસ્સીટન (પોસ્ટ 1500)"
 
@@ -1430,8 +1428,6 @@ msgid "Prakrit languages"
 msgstr "પ્રક્રીત ભાષાઓ"
 
 #. Name for pro
-#, fuzzy
-#| msgid "Provençal, Old (to 1500); Occitan, Old (to 1500)"
 msgid "Provençal, Old (to 1500)"
 msgstr "પ્રોવેન્કલ, જૂનું (1500 સુધી); ઑસ્સીટન, જૂનું (1500 સુધી)"
 
@@ -1472,10 +1468,8 @@ msgid "Romany"
 msgstr "રોમની"
 
 #. Name for ron
-#, fuzzy
-#| msgid "Moldavian; Moldovan"
 msgid "Romanian; Moldavian; Moldovan"
-msgstr "મોલ્ડાવિઅન; મોલ્ડોવન"
+msgstr "રોમાનિયન; મોલ્ડેવિયન; મોલ્ડોવન"
 
 #. Name for run
 msgid "Rundi"
@@ -1502,8 +1496,6 @@ msgid "Yakut"
 msgstr "યાકુટ"
 
 #. Name for sai
-#, fuzzy
-#| msgid "South American Indian languages"
 msgid "South American Indian (Other)"
 msgstr "દક્ષિણ અમેરિકન ભારતીય ભાષાઓ"
 
