--- a/messages/tr/LC_MESSAGES/639-3.po
+++ b/messages/tr/LC_MESSAGES/639-3.po
@@ -13,14 +13,15 @@
 # Serdar Sağlam <teknomobil@msn.com>, 2019.
 # Oguz Ersen <oguzersen@protonmail.com>, 2019.
 # EminUZUN <eminuzunn@gmail.com>, 2020.
+# Oğuz Ersen <oguzersen@protonmail.com>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_639-3\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2020-08-11 14:33+0000\n"
-"Last-Translator: EminUZUN <eminuzunn@gmail.com>\n"
+"PO-Revision-Date: 2021-11-14 06:50+0000\n"
+"Last-Translator: Oğuz Ersen <oguzersen@protonmail.com>\n"
 "Language-Team: Turkish <https://hosted.weblate.org/projects/iso-codes/"
 "iso-639-3/tr/>\n"
 "Language: tr\n"
@@ -28,7 +29,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 4.2-dev\n"
+"X-Generator: Weblate 4.9.1-dev\n"
 
 #. Name for aaa
 msgid "Ghotuo"
@@ -8259,11 +8260,11 @@ msgstr "Agta, Alabat Island"
 
 #. Name for dum
 msgid "Middle Dutch (ca. 1050-1350)"
-msgstr "Flemenkçe, Orta dönem (1050-1350 dolayları)"
+msgstr "Felemenkçe, Orta dönem (1050-1350 dolayları)"
 
 #. Inverted name for dum
 msgid "Dutch, Middle (ca. 1050-1350)"
-msgstr "Flemenkçe, Orta dönem (1050-1350 dolayları)"
+msgstr "Felemenkçe, Orta dönem (1050-1350 dolayları)"
 
 #. Name for dun
 msgid "Dusun Deyah"
@@ -23371,7 +23372,7 @@ msgstr "Od"
 
 #. Name for odt
 msgid "Old Dutch"
-msgstr "Eski Flemenkçe"
+msgstr "Eski Felemenkçe"
 
 #. Inverted name for odt
 msgid "Dutch, Old"
